--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -402,6 +402,49 @@
   "sportsTeams.detail.contactCoach": "تماس با مربی",
   "sportsTeams.detail.teamNotFound": "تیم یافت نشد",
   "sportsTeams.detail.joinTeamDescription": "اگر علاقه‌مند به پیوستن به تیم ما هستید، لطفاً با ما تماس بگیرید.",
-  "Contact Us": "تماس با ما"
+  "Contact Us": "تماس با ما",
+
+   "performingArts": {
+    "hero": {
+      "badge": "هنر و فرهنگ",
+      "title": "برنامه‌های هنرهای نمایشی و فرهنگی",
+      "description": "میراث فرهنگی غنی و برتری هنری را در لیسه سلطان زوی کشف کنید. برنامه‌های هنرهای نمایشی ما سنت‌های افغانی را جشن می‌گیرند و در عین حال خلاقیت و استعداد را در موسیقی، تئاتر، هنرهای تجسمی و رقص پرورش می‌دهند.",
+      "viewEvents": "مشاهده رویدادهای آینده",
+      "watchPerformances": "تماشای اجراها"
+    },
+    "programs": {
+      "title": "برنامه‌های هنری ما",
+      "description": "رشته‌های هنری متنوع را کاوش کنید که به دانش‌آموزان کمک می‌کند خود را بیان کنند و میراث فرهنگی را حفظ نمایند",
+      "students": "دانش‌آموز"
+    },
+    "events": {
+      "title": "رویدادهای فرهنگی آینده",
+      "subtitle": "به ما بپیوندید تا هنر، فرهنگ و خلاقیت را جشن بگیریم",
+      "viewAll": "مشاهده همه رویدادها",
+      "featured": "ویژه",
+      "learnMore": "بیشتر بدانید",
+      "types": {
+        "performance": "اجرا",
+        "exhibition": "نمایشگاه",
+        "workshop": "کارگاه",
+        "competition": "مسابقه"
+      }
+    },
+    "highlights": {
+      "title": "برجسته‌ترین اجراها",
+      "subtitle": "اجراهای برجسته و دستاوردهای هنری دانش‌آموزان ما را تماشا کنید"
+    },
+    "showcase": {
+      "title": "نمایش دانش‌آموزان",
+      "subtitle": "جشن گرفتن از هنرمندان جوان با استعداد و دستاوردهای قابل توجه آنها",
+      "award": "برنده جایزه"
+    },
+    "cta": {
+      "title": "به جامعه هنری ما بپیوندید",
+      "description": "چه به موسیقی، تئاتر، هنرهای تجسمی یا برنامه‌های فرهنگی علاقه داشته باشید، ما از دانش‌آموزان با هر سطح مهارتی برای کاوش خلاقیت خود استقبال می‌کنیم.",
+      "joinProgram": "عضویت در برنامه",
+      "contactUs": "تماس با ما"
+    }
+  }
 
 }
