--- a/src/locales/pa.json
+++ b/src/locales/pa.json
@@ -400,7 +400,49 @@
   "sportsTeams.detail.joinTeam": "زموږ ټیم سره یوځای شئ",
   "sportsTeams.detail.contactCoach": "روزونکي سره اړیکه",
   "sportsTeams.detail.joinTeamDescription": "که تاسو زموږ د سپورټ ټیم سره یوځای کیدو کې علاقه لرئ، مهرباني وکړئ زموږ د روزونکي سره اړیکه ونیسئ.",
-  "Contact Us": "موږ سره اړیکه ونیسئ"
+  "Contact Us": "موږ سره اړیکه ونیسئ",
+    "performingArts": {
+    "hero": {
+      "badge": "هنر او کلتور",
+      "title": "د پرفارمنس هنرونو او کلتوري برنامې",
+      "description": "په سلطان زوی لیسه کې بډایه کلتوري میراث او هنري غوره والی وپیژنئ. زموږ د پرفارمنس هنرونو برنامې افغاني دودونه لمانځي او په همدې وخت کې په موسیقۍ، تیاتر، بصري هنرونو او نڅا کې خلاقیت او استعداد روزي.",
+      "viewEvents": "راتلونکي پیښې وګورئ",
+      "watchPerformances": "پرفارمنسونه وګورئ"
+    },
+    "programs": {
+      "title": "زموږ هنري برنامې",
+      "description": "مختلف هنري څانګې وګورئ چې زده کوونکو سره مرسته کوي چې خپل ځان څرګند کړي او کلتوري میراث وساتي",
+      "students": "زده کوونکي"
+    },
+    "events": {
+      "title": "راتلونکې کلتوري پیښې",
+      "subtitle": "له موږ سره یوځای شئ چې هنر، کلتور او خلاقیت ولمانځو",
+      "viewAll": "ټولې پیښې وګورئ",
+      "featured": "ځانګړې",
+      "learnMore": "نور معلومات",
+      "types": {
+        "performance": "پرفارمنس",
+        "exhibition": "نندارتون",
+        "workshop": "ورکشاپ",
+        "competition": "سیالي"
+      }
+    },
+    "highlights": {
+      "title": "د پرفارمنس لوړ ځایونه",
+      "subtitle": "زموږ د زده کوونکو غوره پرفارمنسونه او هنري لاسته راوړنې وګورئ"
+    },
+    "showcase": {
+      "title": "د زده کوونکو نندارتون",
+      "subtitle": "زموږ د با استعداده ځوان هنرمندانو او د دوی د پام وړ لاسته راوړنو لمانځنه",
+      "award": "د جایزې ګټونکی"
+    },
+    "cta": {
+      "title": "زموږ د هنر ټولنې سره یوځای شئ",
+      "description": "که تاسو موسیقۍ، تیاتر، بصري هنرونو یا کلتوري برنامو کې علاقه لرئ، موږ د ټولو مهارت کچو زده کوونکو ته ښه راغلاست وایو چې خپل خلاقیت وڅیړي.",
+      "joinProgram": "په برنامه کې شامل شئ",
+      "contactUs": "له موږ سره اړیکه ونیسئ"
+    }
+  }
 }
 
 
